# SatUpdate

./: README.md  __init__.py  main.py
agents/: __init__.py  base_agent.py  min_agent.py  rarity_agent.py
examples/: run_simulation.py
ns3_scenarios/: CMakeLists.txt  README.md  satellite-update-scenario.cc
ns3_spice_tests/: conftest.py  ns3_spice_implementation_plan.md  test_backward_compatibility.py  test_network_backend.py  test_ns3_bindings_mode.py  test_ns3_file_backend.py  test_ns3_socket_bindings.py  test_ns3_socket_mode.py  test_spice_provider.py  test_spk_generator.py  test_trajectory_provider.py
simulation/: __init__.py  base_station.py  constellation.py  network_backend.py  ns3_backend.py  orbit.py  satellite.py  simulation.py
tools/: __init__.py  generate_spk.py
visualization/: __init__.py  camera.py  renderer.py  visualizer.py
